# ML-project

./: .gitignore  README.md  app.py  mlearning.ipynb  pizzas.csv  pyproject.toml
