[tool.poetry]
name = "project-ml"
version = "0.1.0"
description = ""
authors = ["n3waz <lhk@cesar.school>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.38.0"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
